--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:a6fSwODGuPGGT6LZOBNYt+1KAhbfG0U0rwEpxn8zorQ=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://hishoe-store.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
