--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:6sJeAEM6yI2z7Da3uhE0RoyrWx21jj7AzJiL6NxC7EA=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=hishoe
+DB_DATABASE=hishoe-store
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -31,8 +31,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=datndph42403@fpt.edu.vn
-MAIL_PASSWORD=swzhtrxaxdmtcmzv
+MAIL_USERNAME=datahihi1100@gmail.com
+MAIL_PASSWORD=rgykczvjrrfmqukb
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
