--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=hishoe
+DB_DATABASE=store3
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -57,3 +57,10 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+VNPAY_TMN_CODE=ZELBI36K
+VNPAY_HASH_SECRET=FELECH0RT4U1QSY9M4BBOZ6ZGWHFMWR1
+VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNPAY_RETURN_URL=http://127.0.0.1:8000/checkout/success
+VNPAY_API_URL=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
+
