update product size and color relationships, and enhance shop views with brand and category pages

--- a/.env
+++ b/.env
@@ -32,8 +32,8 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=datahihi1100@gmail.com
-MAIL_PASSWORD=rgykczvjrrfmqukb
-MAIL_ENCRYPTION=null
+MAIL_PASSWORD=rpvvbxkaurajfkpa
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
@@ -57,3 +57,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TWILIO_SID=AC54340824d65248ef6ee91e9f05769981
+TWILIO_AUTH_TOKEN=f98f6f3f11b66e775f6ef30924b57703
+TWILIO_PHONE_NUMBER=+84377482313
