--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:6sJeAEM6yI2z7Da3uhE0RoyrWx21jj7AzJiL6NxC7EA=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000/
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
