--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=hishoe
+DB_DATABASE=hishoe-store
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -61,3 +61,9 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 TWILIO_SID=AC54340824d65248ef6ee91e9f05769981
 TWILIO_AUTH_TOKEN=f98f6f3f11b66e775f6ef30924b57703
 TWILIO_PHONE_NUMBER=+84377482313
+
+VNPAY_TMN_CODE=ZELBI36K
+VNPAY_HASH_SECRET=FELECH0RT4U1QSY9M4BBOZ6ZGWHFMWR1
+VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNPAY_RETURN_URL=http://127.0.0.1:8000/checkout/success
+VNPAY_API_URL=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
