--- a/.env.example
+++ b/.env.example
@@ -60,10 +60,11 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 VNPAY_TMN_CODE=
 VNPAY_HASH_SECRET=
-VNPAY_URL=
-VNPAY_RETURN_URL=
-VNPAY_API_URL=
+VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNPAY_RETURN_URL=http://127.0.0.1:8000/checkout/success
+VNPAY_API_URL=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=
+GOOGLE_REDIRECT_URI=http://localhost:8000/login/google/callback
+GOOGLE_REDIRECT_URI_ADMIN=http://localhost:8000/auth/callback/google
